css/app.css
/**
* VARIABLES
**/
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
* {
    box-sizing: border-box;
}
.cardRow{
    font-size: 14px;
    margin-top: 24px;
    font-weight: 400;
}

body {
    font-family: "Open Sans";
    font-size: 16px;
    background-color: #eee;
}

/**
* Title
**/
.title {
    text-align: center;
    -webkit-transform: translateY(20px);
    transform: translateY(20px);
    font-size: 45px;
    color: coral;
    text-transform: uppercase;
}

/**
* CARD
**/
.card {
    -webkit-transform: translateX(0%) translateY(0%) translateZ(0);
    transform: translateX(0%) translateY(0%) translateZ(0);
    width: 370px;
    background-color: #fff;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
    overflow: hidden;
    -webkit-transition: box-shadow 0.5s;
    transition: box-shadow 0.5s;
    border-radius: 8px 8px 8px 8px;
}
.card a {
    color: inherit;
    text-decoration: none;

}

.card:hover {
    box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
}

/**
* DATE
**/
.card__date {
    position: absolute;
    top: 220px;
    right: 20px;
    width: 45px;
    height: 45px;
    padding-top: 10px;
    /*background-color: coral;*/
    /*color: #fff;*/
    border-radius: 15%;
    background-color: #faea29;
    color: #000;
    text-align: center;
    font-weight: 700;
    line-height: 13px;
}
.card__date__day {
    font-size: 14px;
}
.card__date__month {
    text-transform: uppercase;
    font-size: 10px;
}

/**
* THUMB
**/
.card__thumb {
    height: 245px;
    overflow: hidden;
    background-color: #000;
    -webkit-transition: height 0.5s;
    transition: height 0.5s;
    border-radius: 8px 8px 0 0;
}
.card__thumb img {
    display: block;
    opacity: 1;
    -webkit-transform: scale(1);
    transform: scale(1);
    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
    transition: opacity 0.5s, -webkit-transform 0.5s;
    transition: opacity 0.5s, transform 0.5s;
    transition: opacity 0.5s, transform 0.5s, -webkit-transform 0.5s;
}
/*animation for scaling out*/
/*.card:hover .card__thumb {*/
    /*height: 130px;*/
/*}*/

/*.card:hover .card__thumb img {*/
    /*opacity: 0.6;*/
    /*-webkit-transform: scale(1.2);*/
    /*transform: scale(1.2);*/
/*}*/

/**
* BODY
**/
.card__body {
    position: relative;
    height: 185px;
    padding: 20px;
    -webkit-transition: height 0.5s;
    transition: height 0.5s;
}
/*.card:hover .card__body {*/
    /*height: 300px;*/
/*}*/

.card__category {
    position: absolute;
    top: -25px;
    left: 0;
    height: 25px;
    padding: 0 15px;
    background-color: #faea29;
    color: #000;
    line-height: 25px;
    font-weight: 700;
    font-size: 10px;
    border-radius: 0 5px 1px 0;
}

.card__title {
    margin: 0;
    padding: 0 0 10px 0;
    color: #000;
    font-size: 16px;
    font-weight: bold;
}

.card__subtitle {
    margin: 0;
    padding: 0 0 10px 0;
    font-size: 12px;
    color: #A3A9A2;
}

.card__description {
    position: absolute;
    left: 20px;
    right: 20px;
    bottom: 56px;
    margin: 0;
    padding: 0;
    color: #666C74;
    line-height: 27px;
    opacity: 0;
    -webkit-transform: translateY(45px);
    transform: translateY(45px);
    -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
    transition: opacity 0.3s, transform 0.3s, -webkit-transform 0.3s;
    -webkit-transition-delay: 0s;
    transition-delay: 0s;
}
/*.card:hover .card__description {*/
    /*opacity: 1;*/
    /*-webkit-transform: translateY(0);*/
    /*transform: translateY(0);*/
    /*-webkit-transition-delay: 0.2s;*/
    /*transition-delay: 0.2s;*/
/*}*/

.card__footer {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    font-size: 14px;
    color: #A3A9A2;
    height:48px;
    text-align: center;
    border-top: 1px solid whitesmoke;
}
.card__footer:hover {
    background: #faea29;
    color: #000;
    border-radius: 0 0 5px 5px;
}

.icon {
    display: inline-block;
    vertical-align: middle;
    margin: -2px 0 0 2px;
    font-size: 18px;
    padding-top: 48px;
}
.icon + .icon {
    padding-left: 10px;
}
@media only screen and (max-width: 1024px){
    .card {
        -webkit-transform: translateX(0%) translateY(0%) translateZ(0);
        transform: translateX(0%) translateY(0%) translateZ(0);
        width: 330px;
        background-color: #fff;
        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
        overflow: hidden;
        -webkit-transition: box-shadow 0.5s;
        transition: box-shadow 0.5s;
        border-radius: 8px 8px 8px 8px;
    }
    .card__thumb {
        height: auto;
        overflow: hidden;
        background-color: #000;
        -webkit-transition: height 0.5s;
        transition: height 0.5s;
        border-radius: 8px 8px 0 0;
    }
    .card__date {
        position: absolute;
        top: 184px;
        right: 20px;
        width: 45px;
        height: 45px;
        padding-top: 10px;
        /* background-color: coral; */
        /* color: #fff; */
        border-radius: 15%;
        background-color: #faea29;
        color: #000;
        text-align: center;
        font-weight: 700;
        line-height: 13px;
    }
}
@media only screen and (max-width: 780px){
    .column, .columns{
        width:50%;
    }
}
@media only screen and (max-width: 600px){
    .column, .columns{
        width:50%;
    }
    .card{
        width:280px;
    }
    .card__thumb {
        height: auto;
        overflow: hidden;
        background-color: #000;
        -webkit-transition: height 0.5s;
        transition: height 0.5s;
        border-radius: 8px 8px 0 0;
    }
    .card__date {
        position: absolute;
        top: 160px;
        right: 20px;
        width: 45px;
        height: 45px;
        padding-top: 10px;
        /* background-color: coral; */
        /* color: #fff; */
        border-radius: 15%;
        background-color: #faea29;
        color: #000;
        text-align: center;
        font-weight: 700;
        line-height: 13px;
    }
}
@media only screen and (max-width: 450px){
    .column, .columns {
        width: 100%;
        padding-left: 2.5rem;
    }
    .card {
        width: 328px;
    }
    .card__date {
        position: absolute;
        top: 184px;
        right: 20px;
        width: 45px;
        height: 45px;
        padding-top: 10px;
        /* background-color: coral; */
        /* color: #fff; */
        border-radius: 15%;
        background-color: #faea29;
        color: #000;
        text-align: center;
        font-weight: 700;
        line-height: 13px;
    }
}
@media only screen and (max-width: 385px){
    .column, .columns{
        width:100%;
        padding-left: 0.5rem;
    }
    .card {
        -webkit-transform: translateX(0%) translateY(0%) translateZ(0);
        transform: translateX(0%) translateY(0%) translateZ(0);
        width: auto;
        background-color: #fff;
        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
        overflow: hidden;
        -webkit-transition: box-shadow 0.5s;
        transition: box-shadow 0.5s;
        border-radius: 8px 8px 8px 8px;
    }
    .card__date {
        position: absolute;
        top: 186px;
        right: 20px;
        width: 45px;
        height: 45px;
        padding-top: 10px;
        /* background-color: coral; */
        /* color: #fff; */
        border-radius: 15%;
        background-color: #faea29;
        color: #000;
        text-align: center;
        font-weight: 700;
        line-height: 13px;
    }
    .card__thumb {
        height: auto;
        overflow: hidden;
        background-color: #000;
        -webkit-transition: height 0.5s;
        transition: height 0.5s;
        border-radius: 8px 8px 0 0;
    }
}
@media only screen and (max-width: 360px){
    .card__date {
        position: absolute;
        top: 174px;
        right: 20px;
        width: 45px;
        height: 45px;
        padding-top: 10px;
        /* background-color: coral; */
        /* color: #fff; */
        border-radius: 15%;
        background-color: #faea29;
        color: #000;
        text-align: center;
        font-weight: 700;
        line-height: 13px;
    }
}
@media only screen and (max-width: 320px){
    .card__date {
        position: absolute;
        top: 148px;
        right: 20px;
        width: 45px;
        height: 45px;
        padding-top: 10px;
        border-radius: 15%;
        background-color: #faea29;
        color: #000;
        text-align: center;
        font-weight: 700;
        line-height: 13px;
    }
}

